log
Fri, Mar 28, 2025 11:36:36 AM: 
 tests:  0|6
total_score: 0/70
25021aa
Fri, Mar 28, 2025 11:41:52 AM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
1eb5fe7
Fri, Mar 28, 2025 11:43:30 AM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
6ca4e92
Fri, Mar 28, 2025 11:51:42 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e0bd532
Fri, Mar 28, 2025 11:52:18 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:45:12: error: incompatible types when returning type 'Node {aka struct Node}' but 'void *' was expected
     return *(list->head);
            ^~~~~~~~~~~~~
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
762d3a4
Fri, Mar 28, 2025 11:52:36 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cd6d790
Fri, Mar 28, 2025 11:53:51 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:44:16: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     int *aux = list->head;
                ^~~~
list.c:45:12: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     return *aux;
            ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7f1146b
Fri, Mar 28, 2025 11:54:21 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:44:16: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     int *aux = list->head;
                ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2655606
Fri, Mar 28, 2025 11:56:09 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
a944e0c
Fri, Mar 28, 2025 10:31:42 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cade46a
Fri, Mar 28, 2025 10:40:56 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
eadedbc
Fri, Mar 28, 2025 10:46:46 PM: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|0
be4db4b
Fri, Mar 28, 2025 10:50:28 PM: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
57e2aa6
Fri, Mar 28, 2025 11:02:11 PM: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
c7ae1cb
Fri, Mar 28, 2025 11:04:23 PM: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
85e848a
Fri, Mar 28, 2025 11:25:31 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
b22e55f
Fri, Mar 28, 2025 11:26:37 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
31e0ee3
Fri, Mar 28, 2025 11:34:14 PM: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:86:23: error: 'return' with a value, in function returning void [-Werror]
     return list->head = newNode;
            ~~~~~~~~~~~^~~~~~~~~
list.c:76:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e46d9ce
Fri, Mar 28, 2025 11:35:03 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
fb96519
Fri, Mar 28, 2025 11:50:21 PM: 
 list.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:96:16: error: 'return' with a value, in function returning void [-Werror]
         return NULL;
                ^~~~
list.c:94:6: note: declared here
 void pushCurrent(List * list, void * data) {
      ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
411fe28
Fri, Mar 28, 2025 11:52:27 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:96:16: error: 'return' with a value, in function returning void [-Werror]
         return NULL;
                ^~~~
list.c:94:6: note: declared here
 void pushCurrent(List * list, void * data) {
      ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3cf4fdf
Fri, Mar 28, 2025 11:54:17 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
70fa984
Fri, Mar 28, 2025 11:59:43 PM: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:96:16: error: 'return' with a value, in function returning void [-Werror]
         return NULL;
                ^~~~
list.c:94:6: note: declared here
 void pushCurrent(List * list, void * data) {
      ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
f8729cb
Sat, Mar 29, 2025 12:03:59 AM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:96:16: error: 'return' with a value, in function returning void [-Werror]
         return NULL;
                ^~~~
list.c:94:6: note: declared here
 void pushCurrent(List * list, void * data) {
      ^~~~~~~~~~~
list.c: In function 'popCurrent':
list.c:127:11: error: unused variable 'data' [-Werror=unused-variable]
     void *data = aux->data;
           ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e6e9271
